# admin-rs

./: .gitignore
account_service/: Cargo.toml  config.toml
account_service/account_types/: Cargo.toml
account_service/account_types/src/: lib.rs
account_service/account_types/src/account_types/: account.rs  common.rs
account_service/data/: accounts_19_01_2025.sql
account_service/docker/: Dockerfile  docker-compose.yml
account_service/src/: cli_args.rs  config.rs  main.rs
account_service/src/storage/: account_row.rs  account_storage.rs  config.rs  db_storage.rs  mod.rs
test_setup_macro/: Cargo.toml
test_setup_macro/src/: lib.rs
